# stat906A1

./: CMakeLists.txt  README.md  main.cpp  q2.cpp  q3.cpp  q5.cpp
include/: LCRND.h  q2.h  q3.h  q5.h
